fix: [WA-596] Add transistion to stop jumping and slight delay on change function

--- a/docroot/themes/custom/wateraid/components/hero/hero.scss
+++ b/docroot/themes/custom/wateraid/components/hero/hero.scss
@@ -306,6 +306,7 @@
 
   &--donate {
     background-color: $wa-navy;
+    transition: margin 300ms;
 
     .hero__image img {
       max-height: calculate-rem(720);
@@ -318,7 +319,6 @@
 
     .donate-widget[data-component-id="wateraid:donate_widget"] {
       margin-top: 0;
-
       @include desktop {
         margin-top: 0;
       }
